@@ -4,7 +4,8 @@ use strict;
 use warnings;
 
 use File::Spec::Functions qw/catfile/;
-use File::Slurper qw/read_text read_binary read_lines read_dir/;
+use File::Slurper qw/read_text read_binary read_lines write_text read_dir/;
+use File::Temp 'tempfile';
 
 use Test::More;
 
@@ -20,5 +21,10 @@ is_deeply([ read_lines($0, 'utf-8', chomp => 1) ], \@content, 'read_lines(chomp 
 
 is_deeply([ read_dir('lib') ], [ 'File' ], 'read_dir appears to work');
 is_deeply([ read_dir('lib', prefix => 1) ], [ catfile(qw/lib File/) ], 'read_dir(prefix => 1) appears to work');
+
+my ($fh, $filename) = tempfile(UNLINK => 1);
+
+ok(eval { write_text($filename, $content); 1 }, 'File has been written') or diag "Error: $@";
+is(read_text($filename), $content, 'New file has correct content');
 
 done_testing;
